--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "lodash": "^4.17.20",
     "monaco-editor-webpack-plugin": "^2.0.0",
     "node-sass": "^4.12.0",
+    "prettier": "^2.1.2",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   }
